--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,12 @@
   font-display: swap;
   font-weight: 400;
 }
+@font-face {
+  font-family: 'FF Bau Medium';
+  src: url('https://cdn.shopify.com/s/files/1/0044/1237/5107/t/1/assets/3A0D89_0_0.woff2')
+    format('woff2');
+}
+
 @import 'config';
 @import 'utilities';
 
@@ -72,15 +78,204 @@ div[class^='btn-'],
   }
 }
 
+#slide-cart {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: 0;
+  background-color: #f2f2ef;
+  max-width: 550px;
+  width: 100%;
+  height: 100%;
+  z-index: 30;
+  opacity: 1;
+  transform: translateX(100%);
+  transition: transform 0.5s ease-in-out;
+  overflow: hidden;
+
+  &.show-cart {
+    transform: translateX(0);
+  }
+
+  .cart-head {
+    padding: 1.25rem 1.25rem 0 1.25rem;
+    &-top {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      &-back {
+        border: 1px solid rgb(198, 204, 199);
+        border-radius: 50%;
+        width: 24px;
+        height: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        i {
+          font-size: 1.2rem;
+        }
+      }
+      &-title {
+        text-align: center;
+        color: #696969;
+        font-weight: 400;
+        font-family: 'FF Bau Medium';
+        letter-spacing: 1px;
+        font-style: normal;
+        font-size: 10px;
+        margin: auto;
+        line-height: 1.2;
+        width: 100%;
+      }
+    }
+    &-currency {
+      select {
+        border: 0;
+        outline: 0;
+        background-color: #fff;
+        width: 80px;
+        padding: 8px 13px 5px 10px;
+        font-family: 'FF Bau Regular', sans-serif;
+        font-weight: 300;
+      }
+    }
+  }
+  .cart-body {
+    padding-left: 20px;
+    padding-right: 20px;
+    overflow-y: scroll;
+    &-wrap {
+      padding-top: 10px;
+      max-height: 60vh;
+      overflow: scroll;
+      &-item {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+        margin-bottom: 20px;
+        background: #fff;
+        padding: 15px;
+        .close-btn {
+          position: absolute;
+          right: 15px;
+          top: 4px;
+          cursor: pointer;
+          //font-size: 20px;
+        }
+        .cart-details {
+          color: #1e2d2b;
+          width: 60%;
+          font-size: 10px;
+          margin-top: 5px;
+          letter-spacing: 0.02px;
+          min-height: 100px;
+          h6 {
+            letter-spacing: 0.03px;
+            font-size: 13px;
+            font-family: 'FF Bau Medium', san-serif;
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+            line-height: 1.5;
+            font-weight: 200;
+          }
+          .size {
+            font-size: inherit;
+          }
+          .terms {
+            font-size: inherit;
+          }
+          .quantity-price {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-size: 100%;
+            margin-top: 10px;
+            .controls {
+              display: flex;
+              justify-content: space-between;
+              align-items: center;
+              border: 0.5px solid #bcbcbc;
+              padding: 7px;
+              width: 76px;
+              .minus,
+              .plus {
+                border: 0;
+                box-shadow: none;
+                outline: none;
+                background-color: transparent;
+                cursor: pointer;
+                color: #000;
+                font-size: 15px;
+              }
+              .counter {
+                padding: 0 10px;
+                text-align: center;
+                font-size: 13px;
+              }
+            }
+            .price {
+              padding: 0 10px;
+              width: inherit;
+              font-size: 13px;
+              letter-spacing: 0.03px;
+            }
+          }
+        }
+
+        .cart-img {
+          width: 33.3%;
+          height: 80px;
+          //padding-right: 15px;
+          img {
+            overflow: hidden;
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
+          }
+        }
+      }
+    }
+  }
+  .cart-sum {
+    padding-left: 20px;
+    padding-right: 20px;
+    border-top: 1px solid #d0d0d0;
+    box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.15);
+    z-index: 1;
+    &-head {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      padding-top: 15px;
+      .sum-title {
+        font-weight: 400;
+        font-size: 13px;
+      }
+      .sum-total {
+        font-family: 'FF Bau Medium', san-serif;
+        font-weight: 400;
+        font-size: 12px;
+      }
+    }
+  }
+}
+
 #main-nav {
   display: flex;
   position: sticky;
   top: 0;
+  z-index: 10;
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 2.5rem;
   box-shadow: grey 0px 2px 3px -3px;
   background-color: #fff;
+  min-height: 70px;
   .nav {
     &-left {
       display: flex;
@@ -134,6 +329,9 @@ div[class^='btn-'],
         }
       }
     }
+  }
+  .menu-icon {
+    display: none;
   }
 }
 
@@ -213,3 +411,5 @@ div[class^='btn-'],
     }
   }
 }
+
+@import 'media';
