--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -60,6 +60,7 @@
     padding: 1rem 0.5rem;
     width: 100%;
     margin-top: 0.5rem;
+    z-index: 0;
   }
   &-sub {
     @extend %btn-shared;
@@ -105,6 +106,21 @@ input[class^='btn-']:focus {
   outline: none;
 }
 
+.back {
+  border: 1px solid rgb(198, 204, 199);
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 300;
+  i {
+    font-size: 1.2rem;
+  }
+}
+
 .overlay {
   position: fixed;
   left: 0;
@@ -114,7 +130,7 @@ input[class^='btn-']:focus {
   background-color: #6e7b70;
   backdrop-filter: blur(1px);
   opacity: 0.5;
-  z-index: 20;
+  z-index: 200;
   pointer-events: none;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
