--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -397,6 +397,7 @@ div[class^='btn-'],
           font-weight: 300;
           line-height: 1.5;
           margin-top: 0.5rem;
+          min-height: 40px;
         }
         &-price {
           font-size: 1rem;
