clean up and refactoring

--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -121,6 +121,11 @@ input[class^='btn-']:focus {
   }
 }
 
+.empty-cart {
+  text-align: center;
+  margin-top: 2rem;
+}
+
 .overlay {
   position: fixed;
   left: 0;
